2021-11-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Alex Sverdlin:
	patch #10031: linuxspi: Support GPIO uAPI v2
	* linuxspi.c (linuxspi_reset_mcu, linuxspi_open): Since Linux
	v5.10 GPIO ABI Version 1 is optional and depends on
	CONFIG_GPIO_CDEV_V1.

2021-11-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Alex Sverdlin:
	patch #10030: linuxspi: Support inverted GPIO pin
	* linuxspi.c (linuxspi_open): Clear the inversion mask on request
	and set default state to avoid short glitches on the GPIO line.

2021-11-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Alex Sverdlin:
	patch #10029: linuxspi: Report GPIO_GET_LINEHANDLE_IOCTL errors
	* linuxspi.c (linuxspi_open): Report ioctl error

2021-11-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Alex Sverdlin:
	patch #10028: linuxspi: close() only when necessary
	* linuxspi.c: unify descriptor closing

2021-11-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Alex Sverdlin:
	patch #10027: linuxspi: Add reset pulse, according to AVR programming algorithm
	* linuxspi.c (linuxspi_open, linuxspi_program_enable):
	movw out reset code into linuxspi_reset_mcu()

2021-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Mosberger-Tang:
	patch #9328: ft245r.c: add TPI support (patches 5-7)
	* ft245r.c (ft245r_set_bitclock): add workaround for
	FT245 hardware bugs in bitclock setting

2021-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Mosberger-Tang:
	patch #9328: ft245r.c: add TPI support (patches 5-7)
	* ft245r.c: Remove the reader thread (also removes
	patch #9079)

2021-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Mosberger-Tang:
	patch #9327: ft245r.c: add TPI support (patches 1-4)
	* ft245r.c (set_pin, ft245r_open): use
	ft245r_send_and_discard() so ft245r_in can go away

2021-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Mosberger-Tang:
	patch #9327: ft245r.c: add TPI support (patches 1-4)